feat(script.js): :sparkles: function para conclusao de tarefa
caceta nesse eu ralei

--- a/index.html
+++ b/index.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To do List</title>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>To do List</title>
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 
 <body>
-    <main class="container">
-            <h1>Lista de Tarefas</h1>
-            <p>Adicione ou remova alguma tarefa.</p>
-            <input type="text" class="tarefa-input" placeholder="Digite o nome da tarefa">
-            <button id="btn">Adicionar</button>
+  <main class="container">
+    <h1>Lista de Tarefas</h1>
+    <p>Adicione ou remova alguma tarefa.</p>
+    <input type="text" class="tarefa-input" placeholder="Digite o nome da tarefa">
+    <button id="btn">Adicionar</button>
 
-        <div>
-            <ul class="container-lista">
-                <li class="tarefa">Lavar roupa</li>
-                <li class="tarefa">Ir ao mercado</li>
-            </ul>
-        </div>
-    </main>
+    <div>
+      <ul class="container-lista">
+          <li class="tarefa">
+            <p></p>
+          </li>
+      </ul>
+    </div>
+  </main>
 
-    <script src="/script.js"></script>
+  <script src="/script.js"></script>
 </body>
 </html>
