style: :lipstick: melhorado scss

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   <main class="container">
     <h1>Lista de Tarefas</h1>
     <p>Adicione ou remova alguma tarefa.</p>
-    <input type="text" class="tarefa-input" placeholder="Digite o nome da tarefa">
-    <button id="btn">Adicionar</button>
+    <div class="container-input">
+      <input type="text" class="tarefa-input" placeholder="Digite o nome da tarefa">
+      <button id="btn">Adicionar</button>
+    </div>
 
     <div>
       <ul class="container-lista">
